Added Background images to album "jumbotron" displays. Issue as of right now: image file names can contain no spaces. working on a fix.

--- a/ReedHampton/Views/Albums/Create.cshtml
+++ b/ReedHampton/Views/Albums/Create.cshtml
@@ -1,58 +1,56 @@
-﻿@model ReedHampton.Models.Album
+﻿@model ReedHampton.Models.AlbumViewModel
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Add New Album</h2>
+
+<hr />
 
 
-@using (Html.BeginForm()) 
-{
+<form action="" method="post" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Album</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
+    @Html.ValidationSummary(true)
+
+    <div style="padding-top:50px; padding-left:300px;">
+        <div>
+            @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <br />
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsPublic)
-                    @Html.ValidationMessageFor(model => model.IsPublic, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            @Html.LabelFor(m => m.Description, new { @class = "col-md-2 control-label" })
+            @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+        <br />
+
+        <div class="form-group-lg">
+            @Html.LabelFor(m => m.IsPublic, new { @class = "col-md-2 control-label" })
+            @Html.EditorFor(m => m.IsPublic, new { @class = "form-control" })
+        </div>
+
+        <br />
+
+        <div>
+            @Html.LabelFor(m => m.AlbumThumbnailUpload, new { @class = "col-md-2 control-label" })
+            @Html.TextBoxFor(m => m.AlbumThumbnailUpload, new { type = "file" })
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <hr />
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    <button type="submit" class="btn btn-success">Create</button>
+    <input type="button" class="btn btn-success" value="Back to List" onclick="window.location = '../../Images/Albums';" />
+</form>
+
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
