--- a/ReedHampton/Views/Images/Edit.cshtml
+++ b/ReedHampton/Views/Images/Edit.cshtml
@@ -8,8 +8,7 @@
 
 <h2>Edit "@Html.ValueFor(model => model.Title)"</h2>
 
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("AlbumGallery", "Albums"))
 {
     @Html.AntiForgeryToken()
     
@@ -80,8 +79,8 @@
         </div>
 
 
-        <input type="submit" value="Update" class="btn btn-success" />
-        <input type="button" class="btn btn-success" value="Back to List" onclick="window.location = '../../Images/Albums';" />
+        <input type="submit" value="Update" class="btn btn-success" data-form-method = "post" formaction="@Url.Action("Edit" , "Images" , new{albumId = ViewBag.albumId , albumName = ViewBag.albumName})"/>
+        <input type="button" class="btn btn-success" value="Back to @ViewBag.albumName" onclick="location.href='@Url.Action("Albums" , "Images" , new{albumId = ViewBag.albumId , albumName = ViewBag.albumName})'" />
     </div>
 }
 
