--- a/ReedHampton/Views/Shared/_Layout.cshtml
+++ b/ReedHampton/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <li>@Html.ActionLink("Development", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Tech Reviews", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Book Suggestions", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Photos", "Index", "Albums")</li>
+                    <li>@Html.ActionLink("Photos", "AlbumGallery", "Albums")</li>
                     <li>@Html.ActionLink("Blog", "Contact", "Home")</li>
                     <li id="ContactMe">@Html.ActionLink("Contact Me", "Contact", "Home")</li>
                 </ul>
