--- a/ReedHampton/Views/Albums/Delete.cshtml
+++ b/ReedHampton/Views/Albums/Delete.cshtml
@@ -4,13 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<br />
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Are you sure you want to delete @Html.ValueFor(model => model.Name)?</h2>
+
+<hr />
+
 <div>
-    <h4>Album</h4>
-    <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal" style="padding-top:25px; padding-left:300px;">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -35,22 +36,14 @@
             @Html.DisplayFor(model => model.IsPublic)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete @Html.ValueFor(model => model.Name)" class="btn btn-danger" />
+            <input type="button" class="btn btn-success" value="Back to Albums" onclick="window.location = '../../Albums/AlbumGallery';" />
         </div>
     }
 </div>
