--- a/ReedHampton/Views/Albums/Edit.cshtml
+++ b/ReedHampton/Views/Albums/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<br />
+
+<h2>Edit @Html.ValueFor(model => model.Name)</h2>
 
 
 @using (Html.BeginForm())
@@ -12,8 +14,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Album</h4>
         <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
@@ -25,6 +27,8 @@
             </div>
         </div>
 
+        <br />
+
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -32,6 +36,8 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <br />
 
         <div class="form-group">
             @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -45,7 +51,7 @@
 
         <br />
 
-        <div class="form-group">
+        <div class="form-group" hidden>
             @Html.LabelFor(model => model.CreatedDate, htmlAttributes: new { @htmlAttributes = new { @readonly = "readonly" }, @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } })
@@ -53,17 +59,22 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="form-group" hidden>
+            @Html.LabelFor(model => model.AlbumThumbnailUrl, htmlAttributes: new { @htmlAttributes = new { @readonly = "readonly" }, @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.AlbumThumbnailUrl, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AlbumThumbnailUrl, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <br />
+
+
+        <input type="submit" value="Update @Html.ValueFor(model => model.Name)" class="btn btn-success" />
+        <input type="button" class="btn btn-success" value="Back to Albums" onclick="window.location = '../../Albums/AlbumGallery';" />
+
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
