--- a/ReedHampton/Views/Images/Create.cshtml
+++ b/ReedHampton/Views/Images/Create.cshtml
@@ -53,7 +53,7 @@
 
     <hr />
 
-    <button type="submit" class="btn btn-success">Create</button>
-    <input type="button" class="btn btn-success" value="Back to List" onclick="window.location = '../../Images/Albums';" />
+    <input value ="Add Image" type="submit" class="btn btn-success" data-form-method = "post" formaction="@Url.Action("Create" , "Images" , new{albumId = ViewBag.albumId , albumName = ViewBag.albumName})">
+    <input type="button" class="btn btn-success" value="Back to @ViewBag.albumName" onclick="location.href='@Url.Action("Albums" , "Images" , new{albumId = ViewBag.albumId , albumName = ViewBag.albumName})'" />
 </form>
 
