Added major styling to the images in albus. These changes included, making same sized thumbnails, allowing those thumbnails to be pressed for an expanded view and placed in a user guided carousel. The album background images were also formatted to fill their respective container.

--- a/ReedHampton/Views/Albums/AlbumGallery.cshtml
+++ b/ReedHampton/Views/Albums/AlbumGallery.cshtml
@@ -38,7 +38,7 @@
                 thumbnailPath = thumbnailPath.Remove(0, 2);
                 finalPath = @Request.ApplicationPath + thumbnailPath;
 
-                start = "<div class=\"jumbotron\" style=\"background-image:url(../.." + finalPath + ")\">";
+                start = "<div class=\"jumbotron\" style=\"background-size:cover; background-image:url(../.." + finalPath + ")\">";
                 close = "</div>";
             }
 
