--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -9,16 +9,6 @@
 <head>
     
     <style>
-        #caption {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 700px;
-            text-align: center;
-            color: maroon;
-            padding: 10px 0;
-            height: 150px;
-        }
         * {
             box-sizing: border-box;
         }
@@ -120,15 +110,6 @@
                 background-color: rgba(0, 0, 0, 0.8);
             }
 
-        /* Number text (1/3 etc) */
-        .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
-        }
-
         img {
             margin-bottom: -4px;
         }
@@ -137,7 +118,9 @@
             text-align: center;
             background-color: white;
             padding: 2px 16px;
-            color: maroon;
+            color: #660000;
+            font-size: 30px;
+            font-family:Garamond;
         }
 
         .demo {
@@ -207,8 +190,8 @@
                     img_path = img_path.Remove(0, 2);
 
                     imagePath = @Request.ApplicationPath + img_path;
-                    thumbnailImage = "<div class=\"column\"><img src=\"" + imagePath + "\" style=\"width:300px; height:300px; object-fit:contain; overflow: hidden;\" onclick=\"openModal();currentSlide(" + img_number + ")\" class=\"hover-shadow cursor\")></div>";
-                    expandedImage = "<div class=\"mySlides\"><div class=\"numbertext\"></div><img alt =\"" + imageCaption + "\" src=\"" + imagePath + "\" style=\"width:100%;\"></div>";
+                    thumbnailImage = "<div class=\"column\"><img src=\"" + imagePath + "\" style=\"width:300px; height:300px; object-fit:cover; overflow: hidden;\" onclick=\"openModal();currentSlide(" + img_number + ")\" class=\"hover-shadow cursor\")></div>";
+                    expandedImage = "<div class=\"mySlides\"><img src=\"" + imagePath + "\" style=\"width:100%;\"><p class =\"caption-container\">" + imageCaption + "</p></div>";
 
                     thumbnailHTML[count] = thumbnailImage;
                     expandedHTML[count] = expandedImage;
@@ -229,11 +212,14 @@
             if (thumbnailHTML[i] != null)
             {
                     @(new HtmlString(thumbnailHTML[i]))
-                if (User.Identity.IsAuthenticated)
-                { 
-                    <input type="button" class="btn btn-success" style="text-align:right;" value="Edit" onclick="location.href='@Url.Action("Edit", "Images", new{id = img_Ids[i] , albumId = ViewBag.albumID , albumName = ViewBag.albumName})'" />
-                    <input type="button" class="btn btn-danger" style="text-align:right;" value="Delete" onclick="location.href='@Url.Action("Delete", "Images", new{id = img_Ids[i] , albumId = ViewBag.albumID , albumName = ViewBag.albumName})'" />
-                }
+                
+                    if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="row" style="margin-top:140px;">
+                            <input type="button" class="btn btn-success" style="" value="Edit" onclick="location.href='@Url.Action("Edit", "Images", new { id = img_Ids[i], albumId = ViewBag.albumID, albumName = ViewBag.albumName })'" />
+                            <input type="button" class="btn btn-danger" style="" value="Delete" onclick="location.href='@Url.Action("Delete", "Images", new { id = img_Ids[i], albumId = ViewBag.albumID, albumName = ViewBag.albumName })'" />
+                        </div>
+                    }
             }
         }
     </div>
