--- a/ReedHampton/Views/Images/Delete.cshtml
+++ b/ReedHampton/Views/Images/Delete.cshtml
@@ -17,7 +17,7 @@
 
 <br />
 
-<h2>Are you sure you want to delete "@Html.ValueFor(model => model.Title)"?"</h2>
+<h2>Are you sure you want to delete @Html.ValueFor(model => model.Title)?"</h2>
 <div>
 
     <hr />
@@ -38,7 +38,7 @@
 
     @( new HtmlString(q))
 
-    <dl class="dl-horizontal" style="float:right; padding-top:150px; padding-right:75px;">
+    <dl class="dl-horizontal" style="float:right; padding-top:150px; padding-right:0px;">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
